--- a/app/views/datasetimport/list.scala.html
+++ b/app/views/datasetimport/list.scala.html
@@ -3,7 +3,7 @@
 @import views.html.dataset.{datasetMenu}
 @import views.html.filter.filterWithJs
 @import org.ada.web.controllers.dataset.dataimport.routes.{DataSetImportController => dataSetImportRoutes}
-@import org.ada.web.util.{formatTimeElement, toHumanReadableCamel, typeColumns}
+@import org.ada.web.util.{formatScheduleTime, toHumanReadableCamel, typeColumns}
 @import org.ada.server.models.{DataSpaceMetaInfo, Field, Filter, FilterShowFieldStyle}
 @import org.ada.server.models.dataimport._
 @import org.ada.server.models.ScheduledTime
@@ -66,10 +66,6 @@
     </div>
 }
 
-@scheduleTime(scheduledTime: ScheduledTime) = {
-    @Html(formatTimeElement(scheduledTime.hour, true, "&nbsp;&nbsp;&nbsp;&nbsp;") + formatTimeElement(scheduledTime.minute, true, "&nbsp;&nbsp;&nbsp;&nbsp;") + formatTimeElement(scheduledTime.second, false, "&nbsp;&nbsp;&nbsp;&nbsp;"))
-}
-
 @scheduleCheckbox(dataSetImport: DataSetImport) = {
     <ul class="list-inline">
         <li>
@@ -77,7 +73,7 @@
         </li>
         @if(dataSetImport.scheduled) {
             <li class="topVerticalAlign">
-                @scheduleTime(dataSetImport.scheduledTime.get)
+                @Html(formatScheduleTime(dataSetImport.scheduledTime.get))
             </li>
         }
     </ul>
