--- a/app/views/datasettrans/twoColumnTable.scala.html
+++ b/app/views/datasettrans/twoColumnTable.scala.html
@@ -1,7 +1,6 @@
-@import org.ada.server.models.datatrans.RenameFieldsTransformation
 @import org.ada.web.util.typeColumns
 @import views.html.datasetimport.schedulePanel
-@import views.html.datasettrans.{resultDataSetInfoPanel, streamSpecPanel, sourceDataSetTypeahead}
+@import views.html.datasettrans.{resultDataSetInfoPanel, streamSpecPanel}
 @import views.html.table.{displayTable, dynamicTable}
 @import views.html.table.dynamicTableJsImport
 @import views.html.elements.labelValue
