--- a/app/views/dataset/processSeries.scala.html
+++ b/app/views/dataset/processSeries.scala.html
@@ -27,7 +27,7 @@
 @inputTextAux(fieldName: String, defaultValue: Option[Any] = None) = @{
     defining(form(fieldName)) { field =>
         inputFieldText(
-            "dataSetSeriesProcessingSpec",
+            "dataSetSeriesProcessing",
             if (field.value.isEmpty && defaultValue.isDefined)
                 field.copy(value = Some(defaultValue.get.toString))
             else
@@ -39,7 +39,7 @@
 }
 
 @selectAux(fieldName: String, values: Seq[(String, String)]) = {
-    @select("dataSetSeriesProcessingSpec", fieldName, form, values, true, Nil, 3)
+    @select("dataSetSeriesProcessing", fieldName, form, values, true, Nil, 3)
 }
 
 @extraFieldButtons = {
