--- a/app/views/datasettrans/changeFieldEnumsElements.scala.html
+++ b/app/views/datasettrans/changeFieldEnumsElements.scala.html
@@ -3,7 +3,7 @@
 @import org.ada.server.models.datatrans.ChangeFieldEnumsTransformation
 @import views.html.table.{displayTable, dynamicTable}
 @import views.html.elements.labelValue
-@import views.html.datasettrans.sourceDataSetTypeahead
+@import views.html.datasettrans.dataSetTypeahead
 @import org.ada.web.util.typeColumns
 @import views.html.table.dynamicTableJsImport
 @import org.incal.play.controllers.WebContext
@@ -15,7 +15,7 @@
     implicit webContext: WebContext
 )
 
-@sourceDataSetTypeahead("changeFieldEnumsTransformation", form)
+@dataSetTypeahead("changeFieldEnumsTransformation", "sourceDataSetId", form)
 
 @dynamicTableJsImport()
 
