--- a/app/views/unsupervisedlearning/list.scala.html
+++ b/app/views/unsupervisedlearning/list.scala.html
@@ -3,7 +3,7 @@
 @import views.html.dataset.datasetMenu
 @import views.html.filter.filterWithJs
 @import org.ada.web.controllers.ml.routes.{UnsupervisedLearningController => route}
-@import org.ada.web.util.{formatTimeElement, toHumanReadableCamel, typeColumns}
+@import org.ada.web.util.{toHumanReadableCamel, typeColumns}
 @import org.ada.server.models.{DataSpaceMetaInfo, Field, FilterShowFieldStyle}
 @import org.ada.server.models.Filter
 @import org.incal.play.controllers.WebContext._
