Runnables: support for a custom input html/view. New runnables: export dictionary with categories, search/update/delete items. Closes #25.

--- a/app/views/dataset/seriesProcessingFieldTable.scala.html
+++ b/app/views/dataset/seriesProcessingFieldTable.scala.html
@@ -32,12 +32,12 @@
     @displayTable(
         items,
         typeColumns[SeriesProcessingSpec](
-            (None, "", _ => {<input type="checkbox" class="table-selection"/>}),
             (None, "Field Path", fieldPathElement),
             (None, "Processing Type", {x => processingTypeElement(Some(x.processingType))}),
             (None, "Past Values Count", pastValuesCountElement),
             (None, "Pad With Zeroes?", padWithZeroesElement)
-        )
+        ),
+        tableSelection = true
     )
 }
 
