--- a/app/views/layout/edit.scala.html
+++ b/app/views/layout/edit.scala.html
@@ -1,4 +1,5 @@
 @import views.html.layout.formErrors
+@import views.html.layout.main
 @import org.incal.play.controllers.WebContext._
 @import org.incal.play.controllers.WebContext
 
