--- a/app/views/table/dynamicStringTable.scala.html
+++ b/app/views/table/dynamicStringTable.scala.html
@@ -19,9 +19,9 @@
     @displayTable(
         items,
         typeColumns[String](
-            (None, "", _ => {<input type="checkbox" class="table-selection"/>}),
             (Some("name"), "Name", identity)
-        )
+        ),
+        tableSelection = true
     )
 }
 
