--- a/app/views/classificationrun/samplingTable.scala.html
+++ b/app/views/classificationrun/samplingTable.scala.html
@@ -18,10 +18,10 @@
     @displayTable(
         items,
         typeColumns[(String, Double)](
-            (None, "", _ => {<input type="checkbox" class="table-selection"/>}),
             (None, "Output Value", outputValueElement),
             (None, "Sampling Ratio", samplingRatioElement)
-        )
+        ),
+        tableSelection = true
     )
 }
 
