--- a/app/views/dataset/dynamicFieldTable.scala.html
+++ b/app/views/dataset/dynamicFieldTable.scala.html
@@ -61,10 +61,10 @@
     @displayTable(
         items,
         typeColumns[Field](
-            (None, "", _ => {<input type="checkbox" class="table-selection"/>}),
             (None, "", fieldNameElement),
             (Some("label"), "", nameOrLabel(showFieldStyle.getOrElse(FilterShowFieldStyle.LabelsOnly)))
-        )
+        ),
+        tableSelection = true
     )
 }
 
