--- a/app/views/datasettrans/twoColumnTable.scala.html
+++ b/app/views/datasettrans/twoColumnTable.scala.html
@@ -32,10 +32,10 @@
     @displayTable(
         data,
         typeColumns[(String, String)](
-            (None, "", _ => {<input type="checkbox" class="table-selection"/>}),
             (None, field1Label, field1Element),
             (None, field2Label, field2Element)
-        )
+        ),
+        tableSelection = true
     )
 }
 
