Message box collapsable. Closes #18

--- a/app/views/clustering/bisectingKMeansElements.scala.html
+++ b/app/views/clustering/bisectingKMeansElements.scala.html
@@ -1,6 +1,6 @@
 @import views.html.elements.{inputText, checkbox, select}
 @import play.api.i18n.Messages
-@import org.ada.server.models.ml.unsupervised.BisectingKMeans
+@import org.incal.spark_ml.models.clustering.BisectingKMeans
 
 @(form: Form[BisectingKMeans])(implicit msg: Messages)
 
