--- a/app/views/clustering/ldaElements.scala.html
+++ b/app/views/clustering/ldaElements.scala.html
@@ -1,7 +1,7 @@
 @import views.html.elements.{inputText, checkbox, select}
 @import play.api.i18n.Messages
-@import org.ada.server.models.ml.unsupervised.LDA
-@import org.ada.server.models.ml.unsupervised.LDAOptimizer
+@import org.incal.spark_ml.models.clustering.LDA
+@import org.incal.spark_ml.models.clustering.LDAOptimizer
 @import org.ada.web.util.enumToValueString
 
 @(form: Form[LDA])(implicit msg: Messages)
