--- a/app/views/navbar.scala.html
+++ b/app/views/navbar.scala.html
@@ -51,7 +51,7 @@
                         <ul class="dropdown-menu">
                             @listItem(mlRoutes.ClassifierController.find(), "Classifiers")
                             @listItem(mlRoutes.RegressorController.find(), "Regressors")
-                            @listItem(mlRoutes.UnsupervisedLearningController.find(), "Clusterings")
+                            @listItem(mlRoutes.ClusteringController.find(), "Clusterings")
                         </ul>
                     </li>
 
