--- a/app/views/clustering/gaussianMixtureElements.scala.html
+++ b/app/views/clustering/gaussianMixtureElements.scala.html
@@ -1,6 +1,6 @@
 @import views.html.elements.{inputText, checkbox, select}
 @import play.api.i18n.Messages
-@import org.ada.server.models.ml.unsupervised.GaussianMixture
+@import org.incal.spark_ml.models.clustering.GaussianMixture
 
 @(form: Form[GaussianMixture])(implicit msg: Messages)
 
