--- a/app/views/dataset/view/viewExportDropdown.scala.html
+++ b/app/views/dataset/view/viewExportDropdown.scala.html
@@ -36,7 +36,7 @@
     dataSetRouter.exportViewAsCsv(dataViewId, _, true, None, _, _, true, true),
     dataSetRouter.exportViewAsJson(dataViewId, _, _, true),
     showFieldStyle,
-    extraDropdownItems
+    Some(extraDropdownItems)
 )
 
 <script type="text/javascript">
