--- a/app/views/footer.scala.html
+++ b/app/views/footer.scala.html
@@ -30,7 +30,7 @@
                     &copy;
                 }
             }
-            <a target="_blank" href="https://ada-discovery.org">Ada Discovery Analytics</a> 2016-@(new java.util.Date().format("yyyy")). All rights reserved.
+            <a target="_blank" href="https://ada-discovery.github.io">Ada Discovery Analytics</a> 2016-@(new java.util.Date().format("yyyy")). All rights reserved.
         </p>
     </div>
 </footer>
