--- a/app/views/dataset/dataSetExportDropdown.scala.html
+++ b/app/views/dataset/dataSetExportDropdown.scala.html
@@ -1,17 +1,19 @@
-@import views.html.{exportModal, exportDropdown}
 @import views.html.elements.{labelValue, fieldTypeahead}
 @import org.ada.web.controllers.dataset.DataSetWebContext
 @import org.ada.web.controllers.dataset.DataSetWebContext._
 @import reactivemongo.bson.BSONObjectID
+@import views.html.export._
 @import org.ada.server.models.FilterShowFieldStyle
 @import org.incal.core.FilterCondition
+@import scala.collection.immutable
 
 @(
     dataSetName: String,
     exportCsvCall: (String, Seq[FilterCondition], Boolean) => Call,
     exportJsonCall: (Seq[FilterCondition], Boolean) => Call,
     showFieldStyle: Option[FilterShowFieldStyle.Value],
-    extraDropdownItems: Html = Html("")
+    extraMenuItems: Option[Html] = None,
+    extraTableModalElements: Option[Html] = None
 )(
     implicit context: DataSetWebContext
 )
@@ -40,40 +42,60 @@
 
 @extraCsvElements = {
     @displayChoiceElement
-    @labelValue("escapeStringValues", "Escape Strings?", labelGridWidth = 3) {
+    @labelValue("escapeStringValues", "Escape Strings?", helpText = Some("Wrap string values with double quotes."), labelGridWidth = 3) {
         <input type="checkbox" class="escapeStringValuesCheckbox">
         <input type="hidden" id="escapeStringValues" name="escapeStringValues" value="false">
     }
 }
 
-@tranSMARTDropdownItems = {
-    <li role="separator" class="divider"></li>
-    <li>
-        <a href="#" data-toggle="modal" data-target="#exportTranSMARTDataModal">
-            Export TranSMART Data
-        </a>
-    </li>
-    <li>
-        <a href="#" data-toggle="modal" data-target="#exportTranSMARTMappingModal">
-            Export TranSMART Mapping
-        </a>
-    </li>
-    @extraDropdownItems
+@extraCsvTableElements = {
+    @extraCsvElements
+    @extraTableModalElements.getOrElse(Html(""))
 }
 
-@tranSMARTModals = {
-    @exportModal("exportTranSMARTDataModal", "CSV TranSMART Data Export", dataSetRouter.exportTranSMARTData, transmartModalBody("\\t"))
-    @exportModal("exportTranSMARTMappingModal", "CSV TranSMART Mapping Export", dataSetRouter.exportTranSMARTMapping, transmartModalBody("\\t"))
+@extraJsonTableElements = {
+    @displayChoiceElement
+    @extraTableModalElements.getOrElse(Html(""))
 }
 
-@exportDropdown(
-    exportCsvCall,
-    exportJsonCall,
-    Nil)(
-    tranSMARTDropdownItems,
-    tranSMARTModals,
-    extraCsvElements,
-    Some(displayChoiceElement)
+@modalDropdown(
+    "Export",
+    Seq(
+        Left((
+            "exportAllConfirmationCsvModal", "Export All as CSV",
+            exportAllCsvModal(exportCsvCall, extraCsvElements)
+        )),
+        Left((
+            "exportFilteredCsvModal", "Export Filtered as CSV",
+            exportFilteredCsvModal(exportCsvCall, Nil, extraCsvElements)
+        )),
+        Left((
+            "exportFilteredTableCsvModal", "Export Filtered Table as CSV",
+            exportFilteredTableCsvModal(exportCsvCall, Nil, extraCsvTableElements)
+        )),
+        Right(Html("<li role='separator' class='divider'></li>")),
+        Left((
+            "exportAllJsonModal", "Export All as JSON",
+            exportAllJsonModal(exportJsonCall)
+        )),
+        Left((
+            "exportFilteredJsonModal", "Export Filtered as JSON",
+            exportFilteredJsonModal(exportJsonCall, Nil, Some(displayChoiceElement))
+        )),
+        Left((
+            "exportFilteredTableJsonModal", "Export Filtered Table as JSON",
+            exportFilteredTableJsonModal(exportJsonCall, Nil, Some(extraJsonTableElements))
+        )),
+        Right(Html("<li role='separator' class='divider'></li>")),
+        Left((
+            "exportTranSMARTDataModal", "Export TranSMART Data",
+            exportModal("exportTranSMARTDataModal", "CSV TranSMART Data Export", dataSetRouter.exportTranSMARTData, transmartModalBody("\\t"))
+        )),
+        Left((
+            "exportTranSMARTMappingModal", "Export TranSMART Mapping",
+            exportModal("exportTranSMARTMappingModal", "CSV TranSMART Mapping Export", dataSetRouter.exportTranSMARTMapping, transmartModalBody("\\t"))
+        ))
+    ) ++ extraMenuItems.map(Right(_))
 )
 
 <script type="text/javascript">
@@ -83,7 +105,7 @@
             if(!$(this).hasClass("tt-input")) {
                 activateTranSMARTFieldTypeaheads();
             }
-        })
+        });
 
         $('.useDisplayValuesCheckbox').change( function(e) {
             var checked = $(this).is(":checked");
@@ -93,6 +115,11 @@
         $('.escapeStringValuesCheckbox').change( function(e) {
             var checked = $(this).is(":checked");
             $(this).parent().find('#escapeStringValues').val(checked)
+        });
+
+        $('.selectedOnlyCheckbox').change( function(e) {
+            var checked = $(this).is(":checked");
+            $(this).parent().find('#selectedOnly').val(checked)
         });
     })
 
