--- a/app/views/regressionrun/list.scala.html
+++ b/app/views/regressionrun/list.scala.html
@@ -5,6 +5,7 @@
 @import views.html.filter.{filter, filterWithJs}
 @import views.html.widget.widgetPanelJs
 @import views.html.elements.labelValue
+@import views.html.export.exportDropdown
 @import org.ada.web.util.typeColumns
 @import org.ada.server.models.{DataSpaceMetaInfo, FilterShowFieldStyle, Field, Filter}
 @import org.ada.web.controllers.dataset.DataSetWebContext._
@@ -76,7 +77,7 @@
                     router.exportCsv(_, true, None, _, _),
                     router.exportJson,
                     conditions
-                )()
+                )
                 </li>
             </ul>
         </div>
